--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "vue-axios": "^2.1.5",
+    "clipboard": "^2.0.4",
     "core-js": "^3.4.8",
+    "qs": "^6.9.1",
     "vant": "^2.2.16",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.5",
     "vue-router": "^3.1.3",
-    "qs": "^6.9.1",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
